<resources>
    <string name="app_name" translatable="false">Best date</string>
    <string name="male" translatable="false">male</string>
    <string name="female" translatable="false">female</string>
    <string name="powered_by_google" translatable="false">powered by <font color="#ffffff"><b>Google</b></font></string>
    <string name="default_notification_channel_id" translatable="false">LoveSexAndSexWithLove</string>
    <string name="miss_country" translatable="false">Miss %s</string>
    <string name="mister_country" translatable="false">Mister %s</string>
    <string name="google_oauth_server_key" translatable="false">320734338059-qfih51slhp529h06gplp1r09f4li41vm.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1234729153762453</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234729153762453</string>
    <string name="facebook_client_token" translatable="false">0aad54b18e8d0286c214dbc4c6a02747</string>
    <string name="percent_symbol" translatable="false">%</string>
    <string name="pro" translatable="false">Pro</string>
    <string name="ad_mob_duel_banner_id" translatable="false">ca-app-pub-6311251540314284/8128537658</string>
    <string name="ad_mob_rewarded_id" translatable="false">ca-app-pub-6311251540314284/2098315926</string>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-6311251540314284~7773081954</string>
    <string name="skip">Skip</string>
    <string name="dating_without_restrictions">Dating without restrictions</string>
    <string name="communicate_and_get_to_know_people_from_all_over_the_world">Communicate and get to know people from all over the world, and a convenient automatic language translator will help you.</string>
    <string name="no_loneliness_just_reality">No loneliness, just reality</string>
    <string name="it_s_very_simple_i_signed_off_threw_an_invitation_card_and_got_a_meeting_of_my_destiny">It’s very simple, I signed off, threw an invitation card and got a meeting of my destiny. There are no long and tedious correspondence.</string>
    <string name="back">Back</string>
    <string name="hello_login_now">Hello!\nLogin Now.</string>
    <string name="welcome_to_our_kind_and_cozy_home">Welcome to our kind and cozy home where you are always welcome and you are the most important character.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">Reset</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email_or_phone_number">Email / Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="geolocation_must_be_enabled">Geolocation must be enabled</string>
    <string name="this_is_necessary_so_that_we_can_make_a_more_suitable_selection">This is necessary so that we can make a more suitable selection of partners who are close to you</string>
    <string name="do_it_later">Do it later</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="specify_the_email_or_phone_number_that_was_entered_earlier_during_registration">Specify the email or phone number that was entered earlier during registration. We will send a confirmation code</string>
    <string name="next">Next</string>
    <string name="already_have_in_account">Already have in account?</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="create_new_account">Create\nNew Account.</string>
    <string name="one_step_to_your_dream">One step to your dream</string>
    <string name="by_clicking_the_sign_up_button_you_agree_to_our_privacy_policy_and_terms_of_use">By clicking the “Create account” button, you agree to our privacy policy and terms of use</string>
    <string name="create_account">Create account</string>
    <string name="set_a_profile_photo">Set a profile\nphoto</string>
    <string name="you_can_upload_up_to_9_photos_to_your_profile">You can upload up to 9 photos\nto your profile.</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="no_permission">Permission not granted</string>
    <string name="take_part_in_a_contest">Take part in a contest</string>
    <string name="mutual_sympathy">Mutual Sympathy</string>
    <string name="top_50">Top 50</string>
    <string name="set_the_main_photo">Set the main photo</string>
    <string name="photo_editing">Photo Editing</string>
    <string name="save">Save</string>
    <string name="image_list">Image list</string>
    <string name="you_can_upload_only_9_photo">You can upload only 9 photo</string>
    <string name="oops_its_error">oops</string>
    <string name="let_s_start">Let’s start!</string>
    <string name="normally">Normally</string>
    <string name="nice">Nice</string>
    <string name="excellent">Excellent</string>
    <string name="surprise">Surprise</string>
    <string name="of">of</string>
    <string name="tell_us_about_yourself_what_you_find_interesting">Tell us about yourself what you find interesting</string>
    <string name="woman_looking_for_a_man">Woman, looking for a man</string>
    <string name="woman_looking_for_a_woman">Woman, looking for a woman</string>
    <string name="man_looking_for_a_man">Man, looking for a man</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="universe">Universe</string>
    <string name="man_looking_for_a_woman">Man, looking for a woman</string>
    <string name="save_changes">Save Changes</string>
    <string name="main_picture">Main picture</string>
    <string name="set_as_a_profile_photo">Set as profile picture</string>
    <string name="adding_and_editing_a_photo">Adding and editing a photo</string>
    <string name="well_done">Well done</string>
    <string name="cm_unit">%s cm</string>
    <string name="kg_unit">%s kg</string>
    <string name="personal_information">Personal information</string>
    <string name="your_appearance">Your appearance</string>
    <string name="search_condition">Search condition</string>
    <string name="about_me">About myself</string>
    <string name="data_verification">Data verification</string>
    <string name="your_free_time">Your free time</string>
    <string name="marital_status">Marital status</string>
    <string name="having_kids">Having kids</string>
    <string name="plase_of_residence">Place of residence</string>
    <string name="education">Education</string>
    <string name="occupational_status">Occupational status</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hair_length">Hair Length</string>
    <string name="eye_color">Eye color</string>
    <string name="hair_color">Hair color</string>
    <string name="purpose_of_dating">Purpose of dating</string>
    <string name="what_do_you_want_for_a_date">What do you want for a date?</string>
    <string name="search_location">Search location</string>
    <string name="hobby">Hobby</string>
    <string name="types_of_sports">Types of sports</string>
    <string name="evening_time">Evening time</string>
    <string name="photo">Photo</string>
    <string name="email">Email</string>
    <string name="social_network">Social network</string>
    <string name="phone_number">Phone number</string>
    <string name="search_age_range">Search age range</string>
    <string name="confirmed">Confirmed</string>
    <string name="your_email_has_not_been_confirmed">Your email has not been confirmed</string>
    <string name="the_questionnaire_has_not_been_confirmed">The questionnaire has not been confirmed</string>
    <string name="your_phone_number_has_not_been_confirmed">Your phone number has not been confirmed</string>
    <string name="married">Married</string>
    <string name="divorced">Divorced</string>
    <string name="single">Single</string>
    <string name="it_s_complicated">it\'s complicated</string>
    <string name="in_love">In love</string>
    <string name="engaged">Engaged</string>
    <string name="actively_searching">Actively searching</string>
    <string name="no_kids">No</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five_or_more">5 or more</string>
    <string name="student">Student</string>
    <string name="working">Working</string>
    <string name="unemployed">Unemployed</string>
    <string name="businessman">Businessman</string>
    <string name="looking_for_my_self">Looking for myself</string>
    <string name="freelancer">Freelancer</string>
    <string name="blue">Blue</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="brown_yellow">Brown-yellow</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="black">Black</string>
    <string name="short_">Short</string>
    <string name="medium">Medium</string>
    <string name="long_">Long</string>
    <string name="no_hair">No hair</string>
    <string name="blond">Blond</string>
    <string name="brunette">Brunette</string>
    <string name="redhead">Redhead</string>
    <string name="friendship">Friendship</string>
    <string name="love">Love</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="app_language">English</string>
    <string name="likes">Likes</string>
    <string name="personal_data">Personal data</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="matches">Matches</string>
    <string name="chats">Chats</string>
    <string name="guests">Guests</string>
    <string name="general_information">General information</string>
    <string name="invitations">Invitations</string>
    <string name="general_info_about_your_account">General information about your account, try to fill in the correct data.</string>
    <string name="general_info">General info</string>
    <string name="password_change">Password change</string>
    <string name="enter_a_old_pass">Enter the old password</string>
    <string name="confirm_the_new_pass">Confirm the new password</string>
    <string name="main_settings">main settings</string>
    <string name="blocked_users">Blocked users</string>
    <string name="a_list_of_users_who_have_been_blocked_by_you">A list of users who have been blocked by you. The list can be edited</string>
    <string name="show_the_list">Show the list</string>
    <string name="language">Language</string>
    <string name="here_you_can_select_the_desired_application_language">Here you can select the desired application language</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="this_application_will_delete_all_your_data_and_account">This action will delete all your data and account</string>
    <string name="delete">Delete</string>
    <string name="blocking_messages">Blocking messages</string>
    <string name="you_will_not_be_able_to_send_messages">You can not get messages, but only invitations.</string>
    <string name="messages">Messages</string>
    <string name="participation_in_matches">Participation in matches</string>
    <string name="the_ability_to_view_other_peoples_profiles">The ability to view other people’s profiles unnoticed.</string>
    <string name="disabling_notifications">Disabling notifications</string>
    <string name="you_will_not_receive_notifications_from_the_selected_categories">You will not receive notifications from the selected categories.</string>
    <string name="fill_the_required_data">Fill the required data</string>
</resources>