<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_nav_graph"
        android:icon="@drawable/search_selector"
        android:title="@string/search" />

    <item
        android:id="@+id/matches_nav_graph"
        android:icon="@drawable/matches_selector"
        android:title="@string/matches" />

    <item
        android:id="@+id/chats_nav_graph"
        android:icon="@drawable/chats_selector"
        android:title="@string/chats" />

    <item
        android:id="@+id/top_nav_graph"
        android:icon="@drawable/top_selector"
        android:title="@string/top_50" />

    <item
        android:id="@+id/guests_nav_graph"
        android:icon="@drawable/guests_selector"
        android:title="@string/guests" />
</menu>