<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical">

    <TextView
        style="@style/component_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/fill_the_required_data"
        android:textSize="18sp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_line" />

    <com.bestDate.view.StandardInputView
        android:id="@+id/nameInput"
        style="@style/standard_input"
        android:layout_marginTop="35dp"
        app:hint="@string/name"
        app:src="@drawable/ic_user" />

    <com.bestDate.view.StandardInfoView
        android:id="@+id/genderInput"
        style="@style/standard_input"
        android:layout_marginTop="20dp"
        app:standard_info_hint="@string/gender"
        app:standard_info_icon="@drawable/ic_gender" />

    <com.bestDate.view.StandardInfoView
        android:id="@+id/birthInput"
        style="@style/standard_input"
        android:layout_marginTop="20dp"
        app:standard_info_hint="@string/birth_date"
        app:standard_info_icon="@drawable/ic_calendar" />

    <com.bestDate.view.button.WhiteButton
        android:id="@+id/next_button"
        style="@style/standard_button"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:title="@string/save" />
</LinearLayout>