<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <com.bestDate.view.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbar_title="@string/password_change"/>

    <com.bestDate.view.settings.PasswordInputView
        android:id="@+id/oldPassInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:show_pass="false"
        app:pass_input_hint="@string/enter_a_old_pass"/>

    <com.bestDate.view.settings.PasswordInputView
        android:id="@+id/newPassInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:show_pass="false"
        app:pass_input_hint="@string/enter_a_new_password"/>

    <com.bestDate.view.settings.PasswordInputView
        android:id="@+id/passConfirmationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:show_pass="false"
        app:pass_input_hint="@string/confirm_the_new_pass"/>

    <com.bestDate.view.button.WhiteButton
        android:id="@+id/passChangeButton"
        style="@style/standard_button"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/save"/>
</LinearLayout>